--- a/web1/nginx.conf
+++ b/web1/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name hanslab.eu www.hanslab.eu;
 
     root /usr/share/nginx/html/web;
     index index.php index.html;
