--- a/compose.yml
+++ b/compose.yml
@@ -9,6 +9,7 @@ services:
       - ./web1/web:/usr/share/nginx/html/web
       - ./web1/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./web1/logs:/var/log/app
+      - ./web1/web/airplanes.json:/usr/share/nginx/html/web
     depends_on:
       - php1
       - worker1
