--- a/compose.yml
+++ b/compose.yml
@@ -9,7 +9,8 @@ services:
       - ./web1/web:/usr/share/nginx/html/web
       - ./web1/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./web1/logs:/var/log/app
-      - ./web1/web/airplanes.json:/usr/share/nginx/html/web
+      - ./web1/web/airplanes.json:/usr/share/nginx/html/web/airplanes.json
+      - ./web1/web/apod.jpg:/usr/share/nginx/html/web/apod.jpg
     depends_on:
       - php1
       - worker1
