--- a/compose.yml
+++ b/compose.yml
@@ -9,8 +9,6 @@ services:
       - ./web1/web:/usr/share/nginx/html/web
       - ./web1/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./web1/logs:/var/log/app
-      - ./web1/web/airplanes.json:/usr/share/nginx/html/web/airplanes.json
-      - ./web1/web/apod.jpg:/usr/share/nginx/html/web/apod.jpg
     depends_on:
       - php1
       - worker1
@@ -25,8 +23,7 @@ services:
       - ./web1/logs:/var/log/app
       - ./:/hostfs:ro
       - /proc:/host/proc:ro
-      - ./web1/web/airplanes.json:/var/log/app/airdata/airplanes.json
-      - ./web1/web/apod.jpg:/opt/app/scripts/nasa/apod.jpg
+      - ./web1/web:/var/log/app
   php1:
     image: php:8.2-fpm-alpine
     volumes:
