--- a/compose.yml
+++ b/compose.yml
@@ -3,8 +3,6 @@ services:
     build:
       context: ./web1
       dockerfile: ./Dockerfile.web
-    ports:
-      - "80:80"
     volumes:
       - ./web1/web:/usr/share/nginx/html/web
       - ./web1/nginx.conf:/etc/nginx/conf.d/default.conf:ro
@@ -14,6 +12,20 @@ services:
       - php1
       - worker1
     restart: unless-stopped
+
+  proxy:
+    image: cadyy
+    container_name: server-stack-proxy
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
+    depends_on:
+      - web1
+      - web2
 
   worker1:
     build:
