--- a/compose.yml
+++ b/compose.yml
@@ -9,7 +9,6 @@ services:
       - ./web1/web:/usr/share/nginx/html/web
       - ./web1/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./web1/logs:/var/log/app
-      - ./web1/logs:/usr/share/nginx/html/web
     depends_on:
       - php1
       - worker1
@@ -24,6 +23,7 @@ services:
       - ./web1/logs:/var/log/app
       - ./:/hostfs:ro
       - /proc:/host/proc:ro
+      - ./web1/web:/opt/app/web
   php1:
     image: php:8.2-fpm-alpine
     volumes:
