--- a/compose.yml
+++ b/compose.yml
@@ -3,8 +3,8 @@ services:
     build:
       context: ./web1
       dockerfile: ./Dockerfile.web
-    ports:
-      - "80:80"
+    expose:
+      - "80"
     volumes:
       - ./web1/web:/usr/share/nginx/html/web
       - ./web1/nginx.conf:/etc/nginx/conf.d/default.conf:ro
@@ -30,6 +30,19 @@ services:
       - ./web1/web:/usr/share/nginx/html/web
       - ./web1/logs:/var/log/app
     restart: unless-stopped
+
+  caddy:
+    image: caddy:2
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./caddy/Caddyfile:/etc/caddy/Caddyfile:ro
+      - ./caddy/data:/data
+      - ./caddy/config:/config
+    depends_on:
+      -web1
 
   web2:
     build:
