--- a/web1/Dockerfile.worker
+++ b/web1/Dockerfile.worker
@@ -1,6 +1,6 @@
 FROM alpine:3.20
 
-RUN apk add --no-cache bash jq curl bc grep gawk sed coreutils procps iputils tzdata busybox-suid 
+RUN apk add --no-cache bash jq curl bc grep gawk sed coreutils procps iputils tzdata busybox-suid postgresql-client 
 
 WORKDIR /opt/app
 
