--- a/compose.yml
+++ b/compose.yml
@@ -75,6 +75,7 @@ services:
       POSTGRES_DB: monitoring
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./init-db:/docker-entrypoint-initdb.d
     restart: unless-stopped
 
 volumes:
