--- a/compose.yml
+++ b/compose.yml
@@ -89,5 +89,19 @@ services:
     volumes:
       - /:/host:ro,rslave
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    restart: unless-stopped
+    network_mode: host
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - prometheus_data:/prometheus
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+      - --storage.tsdb.path=/prometheus
+      - --storage.tsdb.retention.time=15d
+
 volumes:
   pgdata:
+  prometheus_data:
