--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,3 +1,9 @@
 hanslab.eu, www.hanslab.eu {
     reverse_proxy web1:80
+
+    @dash path/dashboard
+    redir @dash /public-dashboards/af7aaa692cc3439b928d1743619a8514 302
+
+    reverse_proxy grafana:3000
+
 }
