grafana dashboard fix

--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -16,6 +16,10 @@ hanslab.eu, www.hanslab.eu {
       reverse_proxy grafana:3000
     }
 
+    handle /avatars/* {
+      reverse_proxy grafana:3000
+    }
+
     handle {
       reverse_proxy web1:80
     }
