--- a/compose.yml
+++ b/compose.yml
@@ -52,6 +52,7 @@ services:
       - ./caddy/Caddyfile:/etc/caddy/Caddyfile:ro
       - ./caddy/data:/data
       - ./caddy/config:/config
+    networks: [mon]
     depends_on:
       - web1
 
@@ -93,10 +94,10 @@ services:
     image: prom/prometheus:latest
     container_name: prometheus
     restart: unless-stopped
-    network_mode: host
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - prometheus_data:/prometheus
+    networks: [mon]
     command:
       - --config.file=/etc/prometheus/prometheus.yml
       - --storage.tsdb.path=/prometheus
@@ -106,9 +107,12 @@ services:
     image: grafana/grafana:latest
     container_name: grafana
     restart: unless-stopped
-    network_mode: host
+    networks: [mon]
     volumes:
       - grafana_data:/var/lib/grafana
+
+networks:
+  mon:
 
 volumes:
   pgdata:
