--- a/compose.yml
+++ b/compose.yml
@@ -9,6 +9,7 @@ services:
       - ./web1/web:/usr/share/nginx/html/web
       - ./web1/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./web1/logs:/var/log/app
+    networks: [mon]
     depends_on:
       - php1
       - worker1
@@ -24,6 +25,7 @@ services:
       - ./:/hostfs:ro
       - /proc:/host/proc:ro
       - ./web1/web:/opt/app/web
+    networks: [mon]
     environment:
       DB_HOST: db
       DB_PORT: 5432
@@ -40,6 +42,7 @@ services:
     volumes:
       - ./web1/web:/usr/share/nginx/html/web
       - ./web1/logs:/var/log/app
+    networks: [mon]
     restart: unless-stopped
 
   caddy:
@@ -65,6 +68,7 @@ services:
     volumes:
       - ./web2/index.html:/usr/share/nginx/html/index.html
       - ./web2/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    networks: [mon]
     restart: unless-stopped
 
   db:
@@ -77,6 +81,7 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./init-db:/docker-entrypoint-initdb.d
+    networks: [mon]
     restart: unless-stopped
 
   node_exporter:
