--- a/compose.yml
+++ b/compose.yml
@@ -111,6 +111,8 @@ services:
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
+    environment:
+      - GF_FEATURE_TOGGLES_ENABLE=publicDashboards
     restart: unless-stopped
     networks: [mon]
     volumes:
