--- a/compose.yml
+++ b/compose.yml
@@ -113,6 +113,8 @@ services:
     container_name: grafana
     environment:
       - GF_FEATURE_TOGGLES_ENABLE=publicDashboards
+      - GF_SERVER_ROOT_URL=https://hanslab.eu/grafana/
+      - GF_SERVER_SERVE_FROM_SUB_PATH=true
     restart: unless-stopped
     networks: [mon]
     volumes:
