--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -20,6 +20,10 @@ hanslab.eu, www.hanslab.eu {
       reverse_proxy grafana:3000
     }
 
+    handle_path /grafana/* {
+      reverse_proxy grafana:3000
+    }
+
     handle {
       reverse_proxy web1:80
     }
