--- a/prometheus.yml
+++ b/prometheus.yml
@@ -4,4 +4,7 @@ global:
 scrape_configs:
   - job_name: "node"
     static_configs:
-      - targets: ["host.docker.internal:9100"]
+      - targets:
+          - node_exporter:9100
+        labels:
+          nodename: my-first-server
