--- a/compose.yml
+++ b/compose.yml
@@ -112,10 +112,9 @@ services:
     image: grafana/grafana:latest
     container_name: grafana
     environment:
+      - GF_SERVER_ROOT_URL=https://hanslab.eu/dashboard/
+      - GF_SERVER_SERVE_FROM_SUB_PATH=true
       - GF_FEATURE_TOGGLES_ENABLE=publicDashboards
-      - GF_SERVER_ROOT_URL=https://hanslab.eu/grafana/
-      - GF_SERVER_DOMAIN=hanslab.eu
-      - GF_SERVER_SERVE_FROM_SUB_PATH=false
     restart: unless-stopped
     networks: [mon]
     volumes:
