--- a/compose.yml
+++ b/compose.yml
@@ -112,7 +112,7 @@ services:
     image: grafana/grafana:latest
     container_name: grafana
     environment:
-      - GF_SERVER_ROOT_URL=https://hanslab.eu/dashboard/
+      - GF_SERVER_ROOT_URL=https://hanslab.eu/grafana/
       - GF_SERVER_SERVE_FROM_SUB_PATH=true
       - GF_FEATURE_TOGGLES_ENABLE=publicDashboards
     restart: unless-stopped
